# bank-sistem

./: pyproject.toml  widget.py
src/: data_frame.py  decorators.py  dict_process.py  generators.py  logger.py  masks.py  processing.py  utils.py  widget.py
tests/: test_data_frame.py  test_decorators.py  test_dict_process.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
